[tool.poetry]
name = "saga"
version = "0.1.0"
description = ""
authors = ["Garrett Gibo <garrett.gibo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^15.0.0"
youtube-dl = {git = "https://github.com/ytdl-org/youtube-dl.git"}
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
